# Decorate

./: README.md  __init__.py  deco.py  pyproject.toml
