[project]
name = "newdeco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nosheenarfan", email = "Nosheenarfan70@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
newdeco = "newdeco:main"
newass = "newdeco:deco.get_name"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
